[package]
name = "JASS-Tree-sitter-Rust"
version = "0.2.0"
authors = ["nazarpunk <nazarpunk@gmail.com>"]
edition = "2021"

[dependencies]
tree-sitter = "0.25.3"
tree-sitter-lua = { path = "./../tree-sitter-lua" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
env_logger = "0.11.8"

[build-dependencies]


