[package]
name = "JASS-Tree-sitter-Rust"
version = "0.2.0"
authors = ["nazarpunk <nazarpunk@gmail.com>"]
edition = "2021"

[dependencies]
#tree-sitter = "0.25.3"
#tree-sitter-lua = { path = "./../tree-sitter-lua" }
tree-sitter-bni = { path = "./../tree-sitter-bni" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
env_logger = "0.11.8"
log = "0.4.27"

[build-dependencies]


